<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    tools:context=".MainActivity"
    android:id="@+id/sign_up">

<!--    <include-->
<!--        app:layout_constraintTop_toBottomOf="@+id/welcome"-->
<!--        layout="@layout/activity_main"-->
<!--        />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_marginHorizontal="40dp"
        android:layout_height="430dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up"
            android:textColor="#808080"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:autofillHints="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minWidth="100dp" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="130dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:autofillHints="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etNewConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="180dp"
            android:autofillHints="@string/confirm_password_hint"
            android:ems="10"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etUniversityAccessCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="230dp"
            android:autofillHints="@string/uni_access_code"
            android:ems="10"
            android:hint="@string/uni_access_code"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="300dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:backgroundTint="#6247AA"
            app:cornerRadius="60dp"
            app:iconPadding="8dp" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvAlreadyMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_already"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="@id/cardView"/>

    <Button
        android:id="@+id/btnBackToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="20sp"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="#6247AA"
        app:backgroundTint="@android:color/transparent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/tvAlreadyMember"
        app:layout_constraintStart_toStartOf="@id/tvAlreadyMember"
        app:layout_constraintTop_toTopOf="@id/tvAlreadyMember"
        />


</androidx.constraintlayout.widget.ConstraintLayout>