<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E9ECEF"
    android:id="@+id/activity_home_navbar">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_bar_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnNavWorkspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_bar_workspace"
            android:textAllCaps="false"
            android:textSize="12sp"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/btnNavNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_bar_notifications"
            android:textAllCaps="false"
            android:textSize="12sp"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/btnNavSupervisor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Messages"
            android:textAllCaps="false"
            android:textSize="12sp"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/btnNavProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_bar_profile"
            android:textAllCaps="false"
            android:textSize="12sp"
            style="?android:attr/borderlessButtonStyle"
            app:backgroundTint="@android:color/transparent"
            />
    </androidx.appcompat.widget.Toolbar>


</androidx.constraintlayout.widget.ConstraintLayout>