<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E9ECEF"
    android:id="@+id/frag_workspace_layout_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCalendar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintWidth_percent="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/calendar"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#6247AA" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <View
                android:id="@+id/calenderIMAGE"
                android:layout_width="125dp"
                android:layout_height="120dp"
                android:background="@drawable/calendarimg"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvCurrentDateMonth"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/tvCurrentDateDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/tvCurrentDateMonth" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--            app:backgroundTint="@android:color/transparent"-->

        <Button
            android:id="@+id/btnCalendarView"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewReferencing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintWidth_percent="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/referencing_guide_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#6247AA" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/referencingimg"
            android:scaleX="0.5"
            android:scaleY="0.4"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnReferencingGuide"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <!--            app:backgroundTint="@android:color/transparent"-->


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewKanban"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/cardViewCalendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintWidth_percent="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"
            android:layout_marginStart="15dp"
            android:text="Kanban Board"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#6247AA" />

        <!--            app:backgroundTint="@android:color/transparent"-->

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/kanban"
            android:scaleY="0.4"
            android:scaleX="0.7"
            android:layout_marginTop="20dp"/>


        <Button
            android:id="@+id/btnKanbanBoard"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMyProject"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/cardViewReferencing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintWidth_percent="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"
            android:layout_marginStart="15dp"
            android:text="My Project"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#6247AA" />

        <!--            app:backgroundTint="@android:color/transparent"-->

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/myprojecticon"
            android:scaleY="0.4"
            android:scaleX="0.7"
            android:layout_marginTop="20dp"/>


        <Button
            android:id="@+id/btnMyProject"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>