...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:id="@+id/kanbanBoardParent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/kanbanToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
...
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/popKanbanFragment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/undo"
            android:scaleX="0.35"
            android:scaleY="0.35" />

...
