<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myProjectParent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="match_parent"
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="5dp">

            <ImageButton
                android:id="@+id/btnPopMyProjectFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/undo"
                android:scaleX="0.2"
                android:scaleY="0.2"
                app:layout_constraintTop_toTopOf="parent"
...
